text spacing correction

--- a/css/research.css
+++ b/css/research.css
@@ -137,7 +137,7 @@ button a:hover{
 	.caption-logo{bottom: 0% !important;right: 5% !important;}
 	.button-position{left: 5%;}
 	.card-border{border: solid #f1f1f1;}
-	.muted-text-mobi{padding: 10px 20px 10px 30px;}
+	.muted-text-mobi{padding: 20px 20px 10px 30px;}
 	.text-heding{padding: 30px 20px 10px;}
 }
 
